2015-02-26  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* build-all.sh: Do not build unified source tree.
	* build-uclibc: Remove mentions of unified source tree.
	* symlink-all.sh: Remove.
	* README.md: No unified source tree anymore.
	* Makefile.release: No need to build unisrc.

2015-02-26  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* arc-init.sh: Common build functions for uClibc tools.
	* build-uclibc.sh: Build without unified source tree.

2015-02-26  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* arc-init.sh: Common build functions.
	* build-elf32.sh: Build without unified source tree.

2015-02-26  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* doc/build.md: New file.

2015-02-26  Andrew Burgess  <andrew.burgess@embecosm.com>

	* arc-init.sh (temp_file_in_dir): New function.
	* build-uclibc.sh: Use temp_file_in_dir instead of mktemp.

2015-02-24  Andrew Burgess  <andrew.burgess@embecosm.com>

	* build-uclibc.sh: Switch on UCLIBC_HAS_THREADS_NATIVE and turn
	off LINUXTHREADS_OLD when building with TLS support.

2015-02-20  Andrew Burgess  <andrew.burgess@embecosm.com>

	* build-uclibc.sh: Create a temporary defconfig file, edit the
	temporary file, then create the .config file.

2015-02-19  Andrew Burgess  <andrew.burgess@embecosm.com>

	* build-uclibc.sh: Remove use of arc_config.

2015-02-17  Anton Kolesov  <Anton.Kolesov@synopsys.com>

	* Makefile.release: Remove any mentions of release in directory names.
	* README.md: Likewise.
	* arc-clone-all.sh: Likewise.
	* arc-init.sh: Likewise.
	* build-all.sh: Likewise.
	* build-elf32.sh: Likewise.
	* build-kernel.sh: Likewise.
	* build-uclibc.sh: Likewise.
	* run-elf32-tests.sh: Likewise.
	* run-tests.sh: Likewise.
	* run-uclibc-tests.sh: Likewise.
	* define-release.sh: Remove.

2015-02-17  Andrew Burgess  <andrew.burgess@embecosm.com>

	* run-uclibc-tests.sh: Switch to arc-snps-linux-uclibc target
	triplet when looking for results.

2015-01-27  Andrew Burgess  <andrew.burgess@embecosm.com>
