@@ -1,0 +1,7 @@
+cgen=cgen:arc-2014.08
+binutils=binutils:arc-2014.08
+gcc=gcc:arc-2014.08
+gdb=gdb:arc-2014.08-gdb
+newlib=newlib:arc-2014.08
+uclibc=uClibc:arc-2014.08
+inux=linux:arc-3.13
