@@ -1,0 +1,7 @@
+cgen=cgen:arc-2014.12
+binutils=binutils:arc-2014.12
+gcc=gcc:arc-2014.12
+gdb=gdb:arc-2014.12-gdb
+newlib=newlib:arc-2014.12
+uclibc=uClibc:arc-2014.12
+linux=linux:arc-2014.12
