@@ -1,0 +1,7 @@
+cgen=cgen:arc-1.0-dev
+binutils=binutils:arc-2.23-dev
+gcc=gcc:arc-4.8-dev
+gdb=gdb:arc-7.5-dev
+newlib=newlib:arc-2.0-dev
+uclibc=uClibc:arc-mainline-dev
+linux=linux:arc-3.13
